# rtvocoder

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmdline/: CMakeLists.txt  cmdline.cc
lib/: BandPass.cc  BandPass.h  CMakeLists.txt  LowPass.cc  LowPass.h  SecondOrderFilter.cc  SecondOrderFilter.h  Utils.cc  Utils.h  Vocoder.cc  Vocoder.h  WAVFile.cc  WAVFile.h
libs/: CMakeLists.txt
libs/ladspa/: CMakeLists.txt
libs/lv2/: CMakeLists.txt
module/: CMakeLists.txt  IPC.cc  IPC.h  Module.cc  Module.h  ModuleWrapper.cc  ModuleWrapper.h  ladspa_lib.cc  lv2_lib.cc
module/internal/: CMakeLists.txt  IModule.h  Module.cc  Module.h
pipewire/: CMakeLists.txt  Pipewire.cc  Pipewire.h  Processor.cc  Processor.h  main.cc  pipewire.cc
tests/: CMakeLists.txt  test_bandpass.cc  test_lowpass.cc  test_vocoder.cc  tests.cc  tests.h
